crates/sniff-test/tests/snapshots/cli__compiler_assert_overrides_are_independent.snap
---
source: crates/sniff-test/tests/cli.rs
expression: snapshot
---
exit: 101
stdout:
<empty>
stderr:
    Checking panic-axioms v0.1.0 ([FIXTURE])
error: function `indexed` may have panic effect
  --> src/lib.rs:9:1
   |
 9 | pub fn indexed(values: &[usize], index: usize) -> usize {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ this is a public item
10 |     values[index]
   |     ------------- this may have panic effect
   |
note: `indexed` reaches panic effect operation here
  --> src/lib.rs:10:5
   |
10 |     values[index]
   |     ^^^^^^^^^^^^^
   = help: if this operation cannot have panic effect, explain why with a `// PANIC:` comment
   = help: if `indexed` can have panic effect, add a `# Panics` section

warning: function `remainder` may have panic effect
 --> src/lib.rs:5:1
  |
5 | pub fn remainder(total_size: usize, block_size: usize) -> usize {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ this is a public item
6 |     total_size % block_size
  |     ----------------------- this may have panic effect
  |
note: `remainder` reaches panic effect operation here
 --> src/lib.rs:6:5
  |
6 |     total_size % block_size
  |     ^^^^^^^^^^^^^^^^^^^^^^^
  = help: if this operation cannot have panic effect, explain why with a `// PANIC:` comment
  = help: if `remainder` can have panic effect, add a `# Panics` section

note: set `show-full-stack-trace = true` under `[analysis]` in sniff-test.toml to show every reachability step
warning: `panic-axioms` (lib) generated 1 warning
error: could not compile `panic-axioms` (lib) due to 1 previous error; 1 warning emitted
