crates/sniff-test/tests/snapshots/cli__dependency_panic_diagnostics.snap
---
source: crates/sniff-test/tests/cli.rs
expression: snapshot
---
exit: 0
stdout:
<empty>
stderr:
    Checking dependency-transitive-panic-leaf v0.1.0 ([FIXTURE]/leaf)
    Checking dependency-transitive-panic-middle v0.1.0 ([FIXTURE]/middle)
    Checking dependency-transitive-panic-app v0.1.0 ([FIXTURE]/app)
warning: function `app` may have panic effect
 --> src/lib.rs:1:1
  |
1 | pub fn app(flag: bool) {
  | ^^^^^^^^^^^^^^^^^^^^^^ this is a public item
2 |     dependency_transitive_panic_middle::middle(flag);
  |     ------------------------------------------------ this may have panic effect
  |
note: `app` calls `middle` here
 --> src/lib.rs:2:5
  |
2 |     dependency_transitive_panic_middle::middle(flag);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: `middle` has documented `# Panics` obligation
 --> [FIXTURE]/middle/src/lib.rs:1:5
  |
1 |   /// # Panics
  |  _____^
2 | | /// leaf panics if `flag` is true
3 | | pub fn middle(flag: bool) {
  | |_________________________^
  = help: if this call cannot have panic effect, explain why with a `// PANIC:` comment
  = help: if `app` can have panic effect, add a `# Panics` section

note: set `show-full-stack-trace = true` under `[analysis]` in sniff-test.toml to show every reachability step
warning: `dependency-transitive-panic-app` (lib) generated 1 warning
    Finished `release` profile [optimized] target(s) in [TIME]
