crates/sniff-test/tests/snapshots/cli__dependency_safety_diagnostics.snap
---
source: crates/sniff-test/tests/cli.rs
expression: snapshot
---
exit: 101
stdout:
<empty>
stderr:
    Checking dependency-safety v0.1.0 ([FIXTURE]/dep)
    Checking dependency-safety-app v0.1.0 ([FIXTURE]/app)
error: [fb1c9dd3] function `read_dependency` may have safety effect
 --> src/lib.rs:1:1
  |
1 | pub fn read_dependency(pointer: *const u8) -> u8 {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ this is a public item
2 |     dependency_safety::read_byte(pointer)
  |     ------------------------------------- this may have safety effect
  |
note: `read_byte` reaches safety effect operation here
 --> [FIXTURE]/dep/src/lib.rs:2:14
  |
2 |     unsafe { *pointer }
  |              ^^^^^^^^
  = help: if this operation cannot have safety effect, explain why with a `// SAFETY:` comment
  = help: if `read_dependency` can have safety effect, add a `# Safety` section
  = help: if the dependency satisfies this obligation internally, audit its source and record the justification there

error: [4cdef8fd] function `read_dependency_again` may have safety effect
 --> src/lib.rs:5:1
  |
5 | pub fn read_dependency_again(pointer: *const u8) -> u8 {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ this is a public item
6 |     dependency_safety::read_byte(pointer)
  |     ------------------------------------- this may have safety effect
  |
note: `read_byte` reaches safety effect operation here
 --> [FIXTURE]/dep/src/lib.rs:2:14
  |
2 |     unsafe { *pointer }
  |              ^^^^^^^^
  = help: if this operation cannot have safety effect, explain why with a `// SAFETY:` comment
  = help: if `read_dependency_again` can have safety effect, add a `# Safety` section
  = help: if the dependency satisfies this obligation internally, audit its source and record the justification there

warning: [2ed4dea2] function `read_documented_dependency` may have safety effect
  --> src/lib.rs:9:1
   |
 9 | pub fn read_documented_dependency(pointer: *const u8) -> u8 {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ this is a public item
10 |     dependency_safety::read_documented(pointer)
   |     ------------------------------------------- this may have safety effect
   |
note: `read_documented_dependency` reaches `documented_read` here in dependency `dependency_safety`
  --> [FIXTURE]/dep/src/lib.rs:14:14
   |
14 |     unsafe { documented_read(pointer) }
   |              ^^^^^^^^^^^^^^^^^^^^^^^^
note: `documented_read` has documented `# Safety` obligation
  --> [FIXTURE]/dep/src/lib.rs:5:5
   |
 5 |   /// # Safety
   |  _____^
 6 | | ///
 7 | | /// `pointer` must be valid to read for one byte.
 8 | | unsafe fn documented_read(pointer: *const u8) -> u8 {
   | |___________________________________________________^
   = help: if this call cannot have safety effect, explain why with a `// SAFETY:` comment
   = help: if `read_documented_dependency` can have safety effect, add a `# Safety` section
   = help: if the dependency satisfies this obligation internally, audit its source and record the justification there

note: run `cargo sniff-test --explain <trace-id>` to see more details
note: set `show-full-stack-trace = true` under `[analysis]` in sniff-test.toml to show every reachability step
warning: `dependency-safety-app` (lib) generated 1 warning
error: could not compile `dependency-safety-app` (lib) due to 2 previous errors; 1 warning emitted
