crates/sniff-test/tests/snapshots/cli__dependency_warning_footer.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: snapshot
---
exit: 0
stdout:
<empty>
stderr:
    Checking dependency-obligation v0.1.0 ([FIXTURE]/dep)
    Checking dependency-app v0.1.0 ([FIXTURE]/app)
warning: [sniff-test::panics::documented-panic] this call's documented panic conditions are not accounted for
 --> src/lib.rs:2:5
  |
2 |     dependency_obligation::documented(flag);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `documented` documents when this call may panic
  |
  = help: address the documented panic conditions at each affected call with `// PANIC:`
  = help: for the full explanation, run `'[SNIFF-TEST]' explain rwqw --cache-dir '[FIXTURE]/app/target/sniff-test/sniff-test-cache/v[FORMAT]'`

note: set `show-full-stack-trace = true` under `[analysis]` in sniff-test.toml to show every reachability step
warning: `dependency-app` (lib) generated 1 warning
    Finished `release` profile [optimized] target(s) in [TIME]
