crates/sniff-test/tests/snapshots/cli__empty_report_roots_can_be_denied.snap
---
source: crates/sniff-test/tests/cli.rs
expression: snapshot
---
exit: 1
stdout:
<empty>
stderr:
    Checking report-roots v0.1.0 ([FIXTURE])
error: `[analysis].report-roots = 0 explicit paths` selected no functions in `report_roots`; no effects were analyzed
  |
  = help: update `[analysis].report-roots` to include functions in the current crate

error: could not compile `report-roots` (lib) due to 1 previous error
