crates/sniff-test/tests/snapshots/cli__empty_report_roots_diagnostic.snap
---
source: crates/sniff-test/tests/cli.rs
expression: snapshot
---
exit: 0
stdout:
<empty>
stderr:
    Checking report-roots v0.1.0 ([FIXTURE])
warning: [sniff-test::analysis::empty-report-roots] `[analysis].report-roots = 0 explicit paths` selected no functions in `report_roots`; no effects were analyzed
 --> [FIXTURE]/empty.toml:2:16
  |
2 | report-roots = []
  |                ^^
  |
  = help: update `[analysis].report-roots` to include functions in the current crate
  = help: for the full explanation, run `'[SNIFF-TEST]' explain ghva --cache-dir '[FIXTURE]/target/sniff-test/sniff-test-cache/v[FORMAT]'`

warning: `report-roots` (lib) generated 1 warning
    Finished `release` profile [optimized] target(s) in [TIME]
