crates/sniff-test/tests/snapshots/cli__full_stack_trace.snap
---
source: crates/sniff-test/tests/cli.rs
expression: snapshot
---
exit: 101
stdout:
<empty>
stderr:
    Checking safe-markers v0.1.0 ([FIXTURE])
error: function `unsafe_call` may have panic effect
  --> src/lib.rs:16:1
   |
16 | pub fn unsafe_call(flag: bool) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ this is a public item
17 |     helper(flag);
   |     ------------ this may have panic effect
   |
note: `helper` calls `panic` here
  --> src/lib.rs:21:5
   |
21 |     assert!(flag);
   |     ^^^^^^^^^^^^^
note: effect trace step 1/3 (public root -> effect source): safe_markers::unsafe_call --direct-call-> safe_markers::helper
  --> src/lib.rs:17:5
   |
17 |     helper(flag);
   |     ^^^^^^^^^^^^
note: effect trace step 2/3 (public root -> effect source): safe_markers::helper --macro-expansion-> macro core::macros::builtin::assert
  --> src/lib.rs:21:5
   |
21 |     assert!(flag);
   |     ^^^^^^^^^^^^^
note: effect trace step 3/3 (public root -> effect source): macro core::macros::builtin::assert --direct-call-> core::panicking::panic
  --> src/lib.rs:21:5
   |
21 |     assert!(flag);
   |     ^^^^^^^^^^^^^
   = help: if this call cannot have panic effect, explain why with a `// PANIC:` comment
   = help: if `unsafe_call` can have panic effect, add a `# Panics` section

error: function `unsafe_ratio` may have panic effect
 --> src/lib.rs:7:1
  |
7 | pub fn unsafe_ratio(total: usize, denominator: usize) -> usize {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ this is a public item
8 |     total / denominator
  |     ------------------- this may have panic effect
  |
note: `unsafe_ratio` reaches panic effect operation here
 --> src/lib.rs:8:5
  |
8 |     total / denominator
  |     ^^^^^^^^^^^^^^^^^^^
note: effect trace step 1/1 (public root -> effect source): safe_markers::unsafe_ratio --effect-operation-> division by zero
 --> src/lib.rs:8:5
  |
8 |     total / denominator
  |     ^^^^^^^^^^^^^^^^^^^
  = help: if this operation cannot have panic effect, explain why with a `// PANIC:` comment
  = help: if `unsafe_ratio` can have panic effect, add a `# Panics` section

error: could not compile `safe-markers` (lib) due to 2 previous errors
