crates/sniff-test/tests/snapshots/cli__included_contract_diagnostics.snap
---
source: crates/sniff-test/tests/cli.rs
expression: snapshot
---
exit: 0
stdout:
<empty>
stderr:
    Checking included-contract v0.1.0 ([FIXTURE])
warning: [74e7957b] function `run` may have panic effect
  --> src/lib.rs:14:1
   |
14 | pub fn run(valid: bool) {
   | ^^^^^^^^^^^^^^^^^^^^^^^ this is a public item
15 |     Worker.checked(valid);
   |     --------------------- this may have panic effect
   |
note: `run` reaches `checked` here
  --> src/lib.rs:15:5
   |
15 |     Worker.checked(valid);
   |     ^^^^^^^^^^^^^^^^^^^^^
note: `checked` has documented `# Panics` obligation
  --> [FIXTURE]/doc/panic.md:1:1
   |
 1 | # Panics
   | ^^^^^^^^
note: `checked` is declared here
  --> src/lib.rs:2:5
   |
 2 | /     #[doc = include_str!("../doc/panic.md")]
 3 | |     fn checked(&self, valid: bool);
   | |___________________________________^
note: the called implementation of `checked` is here
  --> src/lib.rs:9:5
   |
 9 |     fn checked(&self, valid: bool) {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: if this call cannot have panic effect, explain why with a `// PANIC:` comment
   = help: if `run` can have panic effect, add a `# Panics` section

note: run `cargo sniff-test --explain <trace-id>` to see more details
note: set `show-full-stack-trace = true` under `[analysis]` in sniff-test.toml to show every reachability step
warning: `included-contract` (lib) generated 1 warning
    Finished `release` profile [optimized] target(s) in [TIME]
