crates/sniff-test/tests/snapshots/cli__indirect_call_boundary_diagnostics.snap
---
source: crates/sniff-test/tests/cli.rs
expression: snapshot
---
exit: 0
stdout:
<empty>
stderr:
    Checking indirect-calls v0.1.0 ([FIXTURE])
warning: function `indirect_calls::call_documented` may panic through a documented panic
  --> src/lib.rs:11:5
   |
11 |     value.documented(flag);
   |     ^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `indirect_calls::Risky::documented` documents `# Panics` here
note: this function can reach a call with `# Panics` documentation
  --> src/lib.rs:10:1
   |
10 | pub fn call_documented<T: Risky>(value: &T, flag: bool) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: add `// PANIC:` directly above this call explaining why its documented panic conditions cannot occur
  --> src/lib.rs:11:5
   |
11 |     value.documented(flag);
   |     ^^^^^^^^^^^^^^^^^^^^^^
help: document when this function may panic with `/// # Panics` here
  --> src/lib.rs:10:1
   |
10 | pub fn call_documented<T: Risky>(value: &T, flag: bool) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: ensure the callee's panic conditions cannot occur, justify that with `// PANIC:`, or document when the caller may panic with `# Panics`

warning: function `indirect_calls::call_documented` reaches an indirect call whose safety requirements cannot be verified
  --> src/lib.rs:11:5
   |
11 |     value.documented(flag);
   |     ^^^^^^^^^^^^^^^^^^^^^^
   |
note: safety requirements cannot be verified here: indirect_calls::Risky::documented
  --> src/lib.rs:11:5
   |
11 |     value.documented(flag);
   |     ^^^^^^^^^^^^^^^^^^^^^^
note: this function can reach a call whose safety requirements cannot be verified
  --> src/lib.rs:10:1
   |
10 | pub fn call_documented<T: Risky>(value: &T, flag: bool) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: replace the indirect call with a documented concrete boundary, justify every possible target, or configure `indirect-call-boundary` under `[safety.lints]`

warning: function `indirect_calls::call_dyn` reaches an unverifiable indirect call
  --> src/lib.rs:18:1
   |
18 | pub fn call_dyn(value: &dyn Risky, flag: bool) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: panic behavior cannot be verified here: indirect call to undocumented trait method `indirect_calls::Risky::undocumented`
  --> src/lib.rs:19:5
   |
19 |     value.undocumented(flag);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^
note: this function can reach a call whose panic behavior cannot be verified
  --> src/lib.rs:18:1
   |
18 | pub fn call_dyn(value: &dyn Risky, flag: bool) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: document this boundary with `# Panics`, add `// PANIC:` only if every possible callee is locally constrained, or configure `indirect-call-boundary` if this opacity is acceptable

warning: function `indirect_calls::call_dyn` reaches an indirect call whose safety requirements cannot be verified
  --> src/lib.rs:19:5
   |
19 |     value.undocumented(flag);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: safety requirements cannot be verified here: indirect_calls::Risky::undocumented
  --> src/lib.rs:19:5
   |
19 |     value.undocumented(flag);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^
note: this function can reach a call whose safety requirements cannot be verified
  --> src/lib.rs:18:1
   |
18 | pub fn call_dyn(value: &dyn Risky, flag: bool) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: replace the indirect call with a documented concrete boundary, justify every possible target, or configure `indirect-call-boundary` under `[safety.lints]`

warning: function `indirect_calls::call_pointer` reaches an unverifiable indirect call
  --> src/lib.rs:22:1
   |
22 | pub fn call_pointer(callee: fn(bool), flag: bool) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: panic behavior cannot be verified here: indirect call through a function pointer
  --> src/lib.rs:23:5
   |
23 |     callee(flag);
   |     ^^^^^^^^^^^^
note: this function can reach a call whose panic behavior cannot be verified
  --> src/lib.rs:22:1
   |
22 | pub fn call_pointer(callee: fn(bool), flag: bool) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: document this boundary with `# Panics`, add `// PANIC:` only if every possible callee is locally constrained, or configure `indirect-call-boundary` if this opacity is acceptable

warning: function `indirect_calls::call_pointer` reaches an indirect call whose safety requirements cannot be verified
  --> src/lib.rs:23:5
   |
23 |     callee(flag);
   |     ^^^^^^^^^^^^
   |
note: safety requirements cannot be verified here: indirect call through a function pointer
  --> src/lib.rs:23:5
   |
23 |     callee(flag);
   |     ^^^^^^^^^^^^
note: this function can reach a call whose safety requirements cannot be verified
  --> src/lib.rs:22:1
   |
22 | pub fn call_pointer(callee: fn(bool), flag: bool) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: replace the indirect call with a documented concrete boundary, justify every possible target, or configure `indirect-call-boundary` under `[safety.lints]`

warning: function `indirect_calls::call_undocumented` reaches an unverifiable indirect call
  --> src/lib.rs:14:1
   |
14 | pub fn call_undocumented<T: Risky>(value: &T, flag: bool) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: panic behavior cannot be verified here: indirect call to undocumented trait method `indirect_calls::Risky::undocumented`
  --> src/lib.rs:15:5
   |
15 |     value.undocumented(flag);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^
note: this function can reach a call whose panic behavior cannot be verified
  --> src/lib.rs:14:1
   |
14 | pub fn call_undocumented<T: Risky>(value: &T, flag: bool) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: document this boundary with `# Panics`, add `// PANIC:` only if every possible callee is locally constrained, or configure `indirect-call-boundary` if this opacity is acceptable

warning: function `indirect_calls::call_undocumented` reaches an indirect call whose safety requirements cannot be verified
  --> src/lib.rs:15:5
   |
15 |     value.undocumented(flag);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: safety requirements cannot be verified here: indirect_calls::Risky::undocumented
  --> src/lib.rs:15:5
   |
15 |     value.undocumented(flag);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^
note: this function can reach a call whose safety requirements cannot be verified
  --> src/lib.rs:14:1
   |
14 | pub fn call_undocumented<T: Risky>(value: &T, flag: bool) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: replace the indirect call with a documented concrete boundary, justify every possible target, or configure `indirect-call-boundary` under `[safety.lints]`

warning: `indirect-calls` (lib) generated 8 warnings
    Finished `release` profile [optimized] target(s) in [TIME]
