crates/sniff-test/tests/snapshots/cli__missing_report_root_can_be_allowed.snap
---
source: crates/sniff-test/tests/cli.rs
expression: snapshot
---
exit: 0
stdout:
<empty>
stderr:
    Checking report-roots v0.1.0 ([FIXTURE])
    Finished `release` profile [optimized] target(s) in [TIME]
